--- a/xiecheng.html
+++ b/xiecheng.html
@@ -759,7 +759,7 @@
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
-                            <p style="margin:0; padding:0;display: block; float: left"> 日本</p>
+                            <p style="display: block; float: left"> 日本</p>
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
@@ -789,7 +789,7 @@
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
-                            <p style="margin:0; padding:0;display: block; float: left"> 日本</p>
+                            <p style="display: block; float: left"> 日本</p>
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
@@ -866,7 +866,7 @@
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
-                            <p style="margin:0; padding:0;display: block; float: left"> 日本</p>
+                            <p style="display: block; float: left"> 日本</p>
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
@@ -896,7 +896,7 @@
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
-                            <p style="margin:0; padding:0;display: block; float: left"> 日本</p>
+                            <p style="display: block; float: left"> 日本</p>
                         </div>
                         <div class="fuwu-bottom-box">
                             <img src="https://pic.c-ctrip.com/index/v3.0/supply_icon.png" style="margin-top: 10px; display: block;float: left">
@@ -937,6 +937,12 @@
                         <li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
+                        <li>城市酒店</li><li>城市酒店</li>
+                        <li>城市酒店</li><li>城市酒店</li>
+                        <li>城市酒店</li><li>城市酒店</li>
+                        <li>城市酒店</li><li>城市酒店</li>
+                        <li>城市酒店</li><li>城市酒店</li>
+                        <li>城市酒店</li><li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
@@ -960,6 +966,8 @@
                         <li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
+						<li>城市酒店</li>
+                        <li>城市酒店</li>
                     </ul>
                 </div>
             </div><div class="other-center">
@@ -975,6 +983,8 @@
                     <li>城市酒店</li>
                     <li>城市酒店</li>
                     <li>城市酒店</li>
+					<li>城市酒店</li>
+                    <li>城市酒店</li>
                     <li>城市酒店</li>
                 </ul>
             </div>
@@ -986,11 +996,15 @@
                     <li>城市酒店</li>
                     <li>城市酒店</li>
                     <li>城市酒店</li>
+					<li>城市酒店</li>
                     <li>城市酒店</li>
                     <li>城市酒店</li>
                     <li>城市酒店</li>
                     <li>城市酒店</li>
                     <li>城市酒店</li>
+                    <li>城市酒店</li>
+                    <li>城市酒店</li>
+					<li>城市酒店</li>
                     <li>城市酒店</li>
                 </ul>
             </div>
@@ -1004,7 +1018,9 @@
                         <li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
-                        <li>城市酒店</li>
+						<li>城市酒店</li>
+                        <li>城市酒店</li>                    
+					<li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
                         <li>城市酒店</li>
@@ -1022,8 +1038,10 @@
             <div class="a-buttom-b">
                 <div class="a-buttom-left-left">
                     <p style="font-size: 16px; font-weight: bold">为什么选择携程</p>
-                    <p>放心的服务</p>
-                    <p>放心的价格</p>
+                    <div class="fangxin-img"></div>
+					<p style="float:left;width:100px;">放心的服务</p>
+                    <div class="fangxin-img2"></div>
+					<p style="float:left">放心的价格</p>
                 </div>
                 <div class="a-buttom-left">
                     <p style="font-size: 16px; color: black;font-weight: bold">旅游资讯</p>
@@ -1069,9 +1087,9 @@
             </div>
 
         </div>
-        <div style="margin: auto;background: #ccc;text-align: center">Copyright©1999-2019, ctrip.com. All rights reserved. | ICP证：沪B2-20050130</div>
-        <div style="margin: auto;background: #ccc;text-align: center">沪公网备31010502002731号</div>
-        <div style="margin: auto;background: #ccc;text-align: center">违法和不良信息举报电话021-22500846丨上海市旅游网站落实诚信建设主体责任承诺书</div>
+        <div style="margin: auto;margin-top:20px;text-align: center">Copyright©1999-2019, ctrip.com. All rights reserved. | ICP证：沪B2-20050130</div>
+        <div style="margin: auto;text-align: center">沪公网备31010502002731号</div>
+        <div style="margin: auto;margin-bottom:20px;text-align: center">违法和不良信息举报电话021-22500846丨上海市旅游网站落实诚信建设主体责任承诺书</div>
 
 </body>
 </html>
