--- a/xc.html
+++ b/xc.html
@@ -216,7 +216,7 @@
                     <div class="yuanxing">
                         <p>北京</p>
                         <div class="renshu">
-                            <strong>816</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -228,7 +228,7 @@
                     <div class="yuanxing">
                         <p>三亚</p>
                         <div class="renshu">
-                            <strong>1116</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -240,7 +240,7 @@
                     <div class="yuanxing">
                         <p>重庆</p>
                         <div class="renshu">
-                            <strong>817</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -252,7 +252,7 @@
                     <div class="yuanxing">
                         <p>桂林</p>
                         <div class="renshu">
-                            <strong>1150</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -264,7 +264,7 @@
                     <div class="yuanxing">
                         <p>西安</p>
                         <div class="renshu">
-                            <strong>476</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -276,7 +276,7 @@
                     <div class="yuanxing">
                         <p>上海</p>
                         <div class="renshu">
-                            <strong>1038</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -288,7 +288,7 @@
                     <div class="yuanxing">
                         <p>张家界</p>
                         <div class="renshu">
-                            <strong>1158</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
 
                     </div>
@@ -301,7 +301,7 @@
                     <div class="yuanxing">
                         <p>厦门</p>
                         <div class="renshu">
-                            <strong>1146</strong>/人起
+                            <strong>¥816</strong>/人起
                         </div>
                     </div>
                     <div class="top_left">
@@ -354,7 +354,7 @@
                         <div class="yuanxing">
                             <p>北京</p>
                             <div class="renshu">
-                                <strong>816</strong>/人起
+                                <strong>¥816</strong>/人起
                             </div>
                         </div>
                     </div>
@@ -363,7 +363,7 @@
                         <div class="yuanxing">
                             <p>北京</p>
                             <div class="renshu">
-                                <strong>816</strong>/人起
+                                <strong>¥816</strong>/人起
                             </div>
                         </div>
                     </div>
@@ -372,7 +372,7 @@
                         <div class="yuanxing">
                             <p>北京</p>
                             <div class="renshu">
-                                <strong>816</strong>/人起
+                                <strong>¥816</strong>/人起
                             </div>
                         </div>
                     </div>
@@ -381,7 +381,7 @@
                         <div class="yuanxing">
                             <p>北京</p>
                             <div class="renshu">
-                                <strong>816</strong>/人起
+                                <strong>¥816</strong>/人起
                             </div>
                         </div>
                     </div>
@@ -390,7 +390,7 @@
                         <div class="yuanxing">
                             <p>北京</p>
                             <div class="renshu">
-                                <strong>816</strong>/人起
+                                <strong>¥816</strong>/人起
                             </div>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
                         <div class="yuanxing">
                             <p>北京</p>
                             <div class="renshu">
-                                <strong>816</strong>/人起
+                                <strong>¥816</strong>/人起
                             </div>
                         </div>
                     </div>
@@ -436,7 +436,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                         <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -446,7 +446,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -456,7 +456,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -466,7 +466,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -476,7 +476,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -486,7 +486,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -496,7 +496,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -506,7 +506,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -516,7 +516,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -526,7 +526,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -536,7 +536,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -546,7 +546,7 @@
                     <div style="margin-left: 10px">9月14日-9月21日</div>
                     <br>
                     <div class="jiage">
-                        96
+                        ¥96
                     </div>
                     <div class="anniu1">立抢</div>
                 </div>
@@ -607,7 +607,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -615,7 +615,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -623,7 +623,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -631,7 +631,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
 
             </div>
@@ -687,7 +687,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -695,7 +695,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -703,7 +703,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -711,7 +711,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
 
             </div>
@@ -763,7 +763,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -771,7 +771,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -779,7 +779,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
                 <div class="qichetu">
                     <div class="qichetu1">
@@ -787,7 +787,7 @@
                     </div>
                     <p>美国洛杉矶</p>
                     <p>自驾梦幻1号公路</p>
-                    <div class="jiage">164</div>
+                    <div class="jiage">¥164</div>
                 </div>
 
             </div>
@@ -1335,7 +1335,7 @@
         <div class="xc_bottom">
             <div class="xc_bottom_center">
                 <div class="xc_bottom_left">
-                    <div>为什么选择携程</div>
+                    <div style="width: 220px;">为什么选择携程</div>
                     <div class="fangxin">
                         <div class="fangxin1">
                         <div class="fangxintu">
@@ -1373,7 +1373,7 @@
                 <div class="xc_bottom_left">
 
                     <div class="lvyouwenzi">
-                        <div>旅游资讯</div>
+                        <div style="width: 220px;">旅游资讯</div>
 
                         <a href="">宾馆索引</a>
                         <a href="">攻略索引</a>
@@ -1391,7 +1391,7 @@
                 <div class="xc_bottom_left">
 
                     <div class="lvyouwenzi">
-                        <div>旅游资讯</div>
+                        <div style="width: 220px;">旅游资讯</div>
 
                         <a href="">宾馆索引</a>
                         <a href="">攻略索引</a>
@@ -1409,7 +1409,7 @@
                 <div class="xc_bottom_left">
 
                     <div class="lvyouwenzi">
-                        <div>旅游资讯</div>
+                        <div style="width: 220px;">旅游资讯</div>
 
                         <a href="">宾馆索引</a>
                         <a href="">攻略索引</a>
@@ -1422,7 +1422,15 @@
                         <a href="">宾馆索引</a>
                     </div>
                 </div>
-
+                <div class="xc_bottom_right">
+                    <div style="font-size: 12px; width: 134px; text-align: center;margin-bottom: 10px;">微信公众号</div>
+                    <div class="erweima">
+                        <div style="width: 112px;height: 112px;margin: auto; margin-top: 10px;">
+                            <img src="//pic.c-ctrip.com/platform/online/home/er_ctrip_wechat.jpg" alt="">
+                        </div>
+                        <div style="color: #999; font-size: 13px; text-align: center;margin-top: 5px;">扫一扫领福利</div>
+                    </div>
+                </div>
 
 
             </div>
@@ -1432,12 +1440,17 @@
 
 
             <div class="yinwen">Copyright©1999-2019, ctrip.com. All rights reserved. | ICP证：沪B2-20050130</div>
-            <div class="yinwen">沪公网备31010502002731号</div>
+                    <div class="margin">
+                    <div class="yinwen2">
+                    <p class="guohui"></p>
+                沪公网备31010502002731号
+                </div>
+                    </div>
+
             <div class="yinwen">违法和不良信息举报电话021-22500846丨上海市旅游网站落实诚信建设主体责任承诺书</div>
             </div>
         </div>
     </div>
-
 
 </body>
 </html>
